# apertium-fin-deu

./: .gitignore  .travis.yml  AUTHORS  CITATION.cff  Makefile.am  NEWS  README  README.md  apertium-fin-deu.deu-fin.lrx  apertium-fin-deu.deu-fin.lsx  apertium-fin-deu.deu-fin.prep.cg3  apertium-fin-deu.deu-fin.rtx  apertium-fin-deu.deu-fin.t1x  apertium-fin-deu.fin-deu.dix  apertium-fin-deu.fin-deu.rtx  apertium-fin-deu.fin-deu.t1x  autogen.sh  configure.ac  fetch-corpora.bash  modes.xml
dev/: daily-routines.bash  fiwikt.apes.xml  fiwikt2apes.bash  gender-classifier.bash  hitparade.bash  separable.lines  separable.ref  separable.src  spectie-special.bash
dev/testvoc/: .generation.sh.swp  generation.sh
docs/: Makefile.am  apertium-fin-deu.deu-fin.dix.markdown  apertium-fin-deu.deu-fin.t1x.markdown  apertium-fin-deu.deu-fin.t2x.markdown  apertium-fin-deu.deu-fin.t3x.markdown  apertium-fin-deu.fin-deu.dix.markdown  apertium-fin-deu.fin-deu.t1x.markdown  apertium-fin-deu.fin-deu.t2x.markdown  apertium-fin-deu.fin-deu.t3x.markdown  index.md  statistics.markdown
t/: config.sh.in
test/: deu-fin-biltrans-expected.txt  deu-fin-chunker-expected.txt  deu-fin-disam-expected.txt  deu-fin-disam2-expected.txt  deu-fin-generator-expected.txt  deu-fin-generator-gold.txt  deu-fin-morph-expected.txt  deu-fin-pending-biltrans-expected.txt  deu-fin-pending-chunker-expected.txt  deu-fin-pending-disam-expected.txt  deu-fin-pending-disam2-expected.txt  deu-fin-pending-generator-expected.txt  deu-fin-pending-generator-gold.txt  deu-fin-pending-input.txt  deu-fin-pending-morph-expected.txt  deu-fin-pending-postchunk-expected.txt  deu-fin-postchunk-expected.txt  fin-deu-biltrans-expected.txt  fin-deu-disam-expected.txt  fin-deu-generator-expected.txt  fin-deu-generator-gold.txt  fin-deu-input.txt  fin-deu-interchunk-expected.txt  fin-deu-morph-expected.txt  fin-deu-pending-biltrans-expected.txt  fin-deu-pending-chunker-expected.txt  fin-deu-pending-generator-expected.txt  fin-deu-pending-generator-gold.txt  fin-deu-pending-input.txt  fin-deu-pending-morph-expected.txt  fin-deu-pending-postchunk-expected.txt  fin-deu-pending-pretransfer-expected.txt  fin-deu-postchunk-expected.txt  fin-deu-regression-chunker-expected.txt  fin-deu-regression-disam-expected.txt  fin-deu-regression-generator-expected.txt  fin-deu-regression-generator-gold.txt  fin-deu-regression-input.txt  fin-deu-regression-lex-expected.txt  fin-deu-regression-morph-expected.txt  (+2 more)
texts/: dewiki.Friedrich_der_Schöne.text  dewiki.HIMYM.text  dewiki.Pokemon.text  dewiki.Speiseeis.text  dewiki.Stammtisch.text  dewiki.Star_Trek.text  dw.de-Langsam-gesprochene-Nachrichten-2016-09-05.text  dw.de-Langsam-gesprochene-Nachrichten-2016-09-06.text  dw.de-Langsam-gesprochene-Nachrichten-2016-09-07.text  dw.de-Langsam-gesprochene-Nachrichten-2016-09-08.text  dw.de-Langsam-gesprochene-Nachrichten-2016-09-16.text  dw.de-Langsam-gesprochene-Nachrichten-2016-09-21.text  dw.de-Langsam-gesprochene-Nachrichten-2016-09-26.text  dw.de-Langsam-gesprochene-Nachrichten-2016-09-27.text  dw.de-Langsam-gesprochene-Nachrichten-2016-09-28.text  dw.de-Langsam-gesprochene-Nachrichten-2016-09-29.text  dw.de-Langsam-gesprochene-Nachrichten-2016-09-30.text  dw.de-Langsam-gesprochene-Nachrichten-2016-10-04.text  dw.de-Langsam-gesprochene-Nachrichten-2016-10-05.text  dw.de-Langsam-gesprochene-Nachrichten-2016-10-06.text  dw.de-Langsam-gesprochene-Nachrichten-2016-10-07.text  dw.de-Langsam-gesprochene-Nachrichten-2016-10-08.text  dw.de-Langsam-gesprochene-Nachrichten-2016-10-10.text  dw.de-Langsam-gesprochene-Nachrichten-2016-10-11.text  dw.de-Langsam-gesprochene-Nachrichten-2016-10-12.text  dw.de-Langsam-gesprochene-Nachrichten-2016-10-13.text  dw.de-Langsam-gesprochene-Nachrichten-2016-11-04.text  dw.de-Langsam-gesprochene-Nachrichten-2016-11-08.text  dw.de-Langsam-gesprochene-Nachrichten-2016-11-09.text  dw.de-Langsam-gesprochene-Nachrichten-2016-11-10.text  dw.de-Langsam-gesprochene-Nachrichten-2016-11-11.text  dw.de-Langsam-gesprochene-Nachrichten-2016-11-14.text  dw.de-Langsam-gesprochene-Nachrichten-2016-11-15.text  dw.de-Langsam-gesprochene-Nachrichten-2016-11-16.text  dw.de-Langsam-gesprochene-Nachrichten-2016-11-21.text  dw.de-Langsam-gesprochene-Nachrichten-2016-11-22.text  dw.de-Langsam-gesprochene-Nachrichten-2016-12-01.text  dw.de-Langsam-gesprochene-Nachrichten-2016-12-02.text  dw.de-Langsam-gesprochene-Nachrichten-2016-12-05.text  dw.de-Langsam-gesprochene-Nachrichten-2016-12-06.text  (+321 more)
